Fixed enter handler in manual color field in color picker for non-text apps. Fixed shield initialization for text apps. Fixed z-index of dialogs

--- a/libsrc/scss/dialogs.scss
+++ b/libsrc/scss/dialogs.scss
@@ -24,7 +24,7 @@ $header_font: Museo, Helvetica, Arial, sans-serif;
 .dialog { 
   display: none; 
   position:absolute;
-  z-index:2; 
+  z-index:4; 
   width: 500px;
   background-color : white;
   -moz-box-shadow: 05px 05px 05px #666;
